--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano<span>2025</span></h2>
+        <h2 class="titulo-principal">Meus objetivos do ano<span>_2025/2027</span></h2>
         <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Cursos na Alura</button>
+            <button class="botao ativo">Cursos</button>
             <button class="botao">Criar projetos em Javascript</button>
             <button class="botao">Criar um portfolio</button>
             <button class="botao">Atualizar meu currículo</button>
@@ -22,22 +22,122 @@
             <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Estudar 4 Cursos Programação</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para concluir objetivos</h4>
-                <div class="contador"></div>
+                <div class="contador">
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="anos0"></p>
+                        <p class="contador-digito-texto">anos</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="meses0"></p>
+                        <p class="contador-digito-texto">meses</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="dias0"></p>
+                        <p class="contador-digito-texto">dias</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="horas0"></p>
+                        <p class="contador-digito-texto">horas</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="minutos0"></p>
+                        <p class="contador-digito-texto">minutos</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="segundos0"></p>
+                        <p class="contador-digito-texto">segundos</p>
+                    </div>
+                </div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em js</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para concluir objetivos</h4>
-                <div class="contador"></div>
+                <div class="contador">
+                     <div class="contador-digito">
+                        <p class="contador-digito-numero" id="anos1"></p>
+                        <p class="contador-digito-texto">anos</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="meses1"></p>
+                        <p class="contador-digito-texto">meses</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="dias1"></p>
+                        <p class="contador-digito-texto">dias</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="horas1"></p>
+                        <p class="contador-digito-texto">horas</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="minutos1"></p>
+                        <p class="contador-digito-texto">minutos</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="segundos1"></p>
+                        <p class="contador-digito-texto">segundos</p>
+                    </div>
+                </div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Criar um Portfólio</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para concluir objetivos</h4>
-                <div class="contador"></div>
+                <div class="contador">
+                     <div class="contador-digito">
+                        <p class="contador-digito-numero" id="anos2"></p>
+                        <p class="contador-digito-texto">anos</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="meses2"></p>
+                        <p class="contador-digito-texto">meses</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="dias2"></p>
+                        <p class="contador-digito-texto">dias</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="horas2"></p>
+                        <p class="contador-digito-texto">horas</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="minutos2"></p>
+                        <p class="contador-digito-texto">minutos</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="segundos2"></p>
+                        <p class="contador-digito-texto">segundos</p>
+                    </div>
+                </div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Atualizar Curriculum Vitae</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para concluir objetivos</h4>
-                <div class="contador"></div>
+                <div class="contador">
+                     <div class="contador-digito">
+                        <p class="contador-digito-numero" id="anos3"></p>
+                        <p class="contador-digito-texto">anos</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="meses3"></p>
+                        <p class="contador-digito-texto">meses</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="dias3"></p>
+                        <p class="contador-digito-texto">dias</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="horas3"></p>
+                        <p class="contador-digito-texto">horas</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="minutos3"></p>
+                        <p class="contador-digito-texto">minutos</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero" id="segundos3"></p>
+                        <p class="contador-digito-texto">segundos</p>
+                    </div>
+                </div>
             </div>
         </div>
         </div>
